# tinyCompiler

./: AST.h  CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  Complier.cpp  Complier.h  Enum.h  Parser.cpp  Parser.h  README.md  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h  Tools.cpp  Tools.h  Transformer.cpp  Transformer.h  main.cpp  print.cpp  print.h
sourcefiles/: test_file.lisp
targetfiles/: main.c
